--- a/css/Top.css
+++ b/css/Top.css
@@ -34,7 +34,7 @@
 	position		: relative;
 	height			: 15mm;
 	top			: 3mm;
-	width			: 130mm;
+	width			: 110mm;
 	left			: 20mm;
 }
 
@@ -114,6 +114,9 @@
 	width			: 175px;
 }
 
+#Top .menu li.rooms {
+	border-right		: 0px;
+}
 #Top .menu li:hover {
 	color			: #FFA200;
 }
