--- a/css/TopMenus.css
+++ b/css/TopMenus.css
@@ -30,7 +30,7 @@
 
 #Page #RoomMenuDiv ul,
 #Page #ChallengeMenuDiv ul,
-#Page #GameRoomMenuDiv ul {
+{
 	height			: 22.5mm;
 	list-style		: none;
 	overflow		: auto;
@@ -38,7 +38,7 @@
 
 #Page #RoomMenuDiv li,
 #Page #ChallengeMenuDiv li,
-#Page #GameRoomMenuDiv li {
+{
 	font			: 11px Trebuchet MS;
 	color			: #216778;
 	margin-top		: 3px;
@@ -63,5 +63,23 @@
 }
 
 #Page #RoomMenuDiv #createRoom {
+	text-align		: center;
+}
+
+
+#Page #GameRoomMenuDiv ul
+{
+	font			: italic bold 11px Trebuchet MS;
+	color			: #216778;
+	margin-top		: 3px;
+	cursor			: default;
+	list-style		: none;
+}
+
+#Page #GameRoomMenuDiv li
+{
+	font			: 10px Trebuchet MS;
+	color			: #216778;
+	cursor			: pointer;
 	text-align		: center;
 }
