--- a/css/Profile.css
+++ b/css/Profile.css
@@ -82,12 +82,12 @@
 	margin-left	:	60%;
 }
 
-#ProfileDiv #OldGamesDiv {
+#ProfileDiv #OldGameDiv {
 	margin-top	:	10px;
 }
 
 #ProfileDiv #ButtonsDiv {
-	margin-top	:	5mm;
+	margin-top	:	10mm;
 	text-align	: center;
 }
 
@@ -122,6 +122,7 @@
 	cursor		:	pointer;
 	font 			: 10px Trebuchet MS;
 	color			: #216778;
+	border-bottom		:	1px solid #216778
 }
 #ProfileDiv .inf,
 #ProfileDiv .inf_whoami {
@@ -134,8 +135,8 @@
 }
 
 #ProfileDiv .inf_whoami {
-	max-height		: 10mm;
-	overflow		: auto;
+	max-height		: 22mm;
+	overflow	: auto;
 	width			: 70mm;
 }
 
@@ -153,6 +154,7 @@
 #ProfileDiv .oldgames {
 	font 			: 12px Trebuchet MS;
 	color			: #216778;
+	border-bottom		:	1px solid #216778
 }
 
 #ProfileDiv .oldgames:hover {
