Added: XadrezLivre to IE; Changed: Show XadrezLivre logo;

--- a/css/IEFix.css
+++ b/css/IEFix.css
@@ -18,7 +18,7 @@
 
 #Top h1{
 	margin			: 0.5mm;
-	background		: url("../images/ie/logochessd.gif") no-repeat;
+	background		: url("../images/ie/logo.gif") no-repeat;
 }
 
 #Top .icons{
