--- a/css/LoadIE.css
+++ b/css/LoadIE.css
@@ -1,5 +1,5 @@
 #LoadDiv h1{
-	background		: url("../images/ie/login/logo_chessd.gif") no-repeat;
+	background		: url("../images/ie/logo.gif") no-repeat;
 }
 
 #LoadDiv .grey_ball{
