Modified: Change profile span Modified: Spacement of room messages and scrollbar Modified: Scrollbar in Games and Rooms list

--- a/css/Left.css
+++ b/css/Left.css
@@ -27,13 +27,13 @@
 }
 
 #Main #Left #User span {
-	font			: 11px Trebuchet MS;
+	font			: 10px Trebuchet MS;
 	color			: #FFA200;
 	cursor		: pointer;
 }
 
 #Main #Left #User span:hover {
-	font			: bold 11px Trebuchet MS;
+	border-bottom:	1px solid #FFA200;
 }
 
 #Main #Left #User h2 {
