--- a/css/TopMenus.css
+++ b/css/TopMenus.css
@@ -9,6 +9,8 @@
 	width			: 28mm;
 	height			: 26mm;
 	padding			: 1mm;
+	overflow-x	:	hidden;
+	overflow-y	:	auto;
 }
 #Page #ChallengeMenuDiv{
 	position		: absolute;
@@ -89,4 +91,6 @@
 	color			: #216778;
 	cursor			: pointer;
 	text-align		: center;
+	margin-top:	1px;
+	margin-bottom:	1px;
 }
