Added: Parser short move in MainData Moves; Changed: Display short move in board interface;

--- a/css/Board.css
+++ b/css/Board.css
@@ -297,7 +297,11 @@
 }
 
 #MoveList span{
-	margin-left		: 3mm;
+	margin-left		: 2mm;
+}
+
+#MoveList span.move{
+	margin-left		: 5mm;
 }
 
 #MoveListDiv #MoveListButtons{
