Modified: Top Menu css, adjust to fit all icons in one line in epiphany and galeon

--- a/css/Top.css
+++ b/css/Top.css
@@ -34,8 +34,8 @@
 	position		: relative;
 	height			: 15mm;
 	top			: 3mm;
-	width			: 110mm;
-	left			: 20mm;
+	width			: 85%;
+	left			: 14%;
 }
 
 #Top .icons li {
