--- a/css/User.css
+++ b/css/User.css
@@ -48,6 +48,7 @@ div .UserList td.rating{
 	text-align		: right;
 }
 
+/*
 div .UserList #order_nick, 
 div .UserList .order_rating,
 div .UserList .order_rating_selec {
@@ -83,6 +84,40 @@ div .UserList .order_selec {
 	color                   : #FFA200 !important;
 }
 
+*/
+div .UserList #order_nick
+{
+	color			: #216778;
+	cursor			: pointer;
+}
+
+div .UserList #order_nick.selected
+{
+	color			: #FFA200;
+	font-weight             : bold !important;
+}
+
+div .UserList #order_rating
+{
+	color			: #216778;
+	cursor			: pointer;
+	position                : absolute;
+	width                   : 29mm;
+	right                   : 3px;
+	text-align              : right;
+	font-size		: 11px;
+	border                  : 1px solid #216778;
+}
+
+div .UserList #order_rating.selected
+{
+	border                  : 1px solid #FFA200;
+}
+
+div .UserList #order_rating option.selected
+{
+	color			: #FFA200;
+}
 
 /*Contact list user list css*/
 #ContactInside .UserList{
