--- a/css/Register.css
+++ b/css/Register.css
@@ -1,6 +1,7 @@
 body {
 	background		:transparent url(../images/fundo_interface.png) repeat-x scroll 0%;
 	margin			: 0px;
+	min-height		: 500px;
 }
 
 #MainDiv {
@@ -12,7 +13,7 @@ body {
 	position		:relative;
 	top				:50px;
 	left			:50%;
-	margin-left		:-230px;
+	margin-left		:-250px;
 }
 
 #MainDiv p{
