--- a/css/Welcome.css
+++ b/css/Welcome.css
@@ -1,8 +1,9 @@
 #Welcome{
 	position	: absolute;
-	left		: 30%;
+	left		: 50%;
 
 	margin-top	: 50px;
+	margin-left	: -22%;
 
 	width		: 550px;
 
@@ -63,6 +64,7 @@
 #WelcomeInstruction li{
 	margin-left	: 25px;
 	margin-bottom	: 5px;
+	text-align	: justify;
 }
 
 #WelcomeClose{
