Added: Kick and ban window with input to write reason; Added: Kick and ban window CSS; Added: Reason to kick and ban in Jabber messages;

--- a/css/Admin.css
+++ b/css/Admin.css
@@ -1,12 +1,21 @@
-#UnbanDiv{
+#UnbanDiv,
+#BanDiv,
+#KickDiv
+{
 	width		: 230px;
 }
 
-#UnbanDiv #UnbanInput{
+#UnbanDiv #UnbanInput,
+#BanDiv #BanInput,
+#KickDiv #KickInput
+{
 	margin		: 5px;
 	size		: 25;
 }
 
-#UnbanDiv #ButtonsDiv{
+#UnbanDiv #ButtonsDiv,
+#BanDiv #ButtonsDiv,
+#KickDiv #ButtonsDiv
+{
 	margin-top	: 15px;
 }
