--- a/css/Main.css
+++ b/css/Main.css
@@ -1,6 +1,8 @@
 * {
 	margin			: 0px;
 	padding			: 0px;
+	/*font-family		: Trebuchet MS;*/
+	font-family		: Trebuchet MS, arial, sans-serif;
 }
 
 body {
