--- a/css/Board.css
+++ b/css/Board.css
@@ -66,7 +66,7 @@
 }
  
 #IndexV li {
-	font			: 18px Trebuchet MS;
+	font-size		: 18px;
 	color			: #216778;
 	width			: 15px;
 	height			: 38px;
@@ -90,7 +90,7 @@
 #IndexH li {
 	list-style		: none;
 	float			: left;
-	font			: 18px Trebuchet MS;
+	font-size		: 18px;
 	color			: #216778;
 	width			: 38px;
 	height			: 38px;
@@ -115,7 +115,8 @@
 	right			: -3px;
 	top				: -5mm;
 	width			: 4mm;
-	font			: bold 10px Trebuchet MS;
+	font-weight		: bold;
+	font-size		: 10px;
 	text-align		: center;
 	background-color: #216778;
 	color			: #FFF;
@@ -128,7 +129,7 @@
 	position		: relative;
 	width			: 53mm;
 	height			: 30mm;
-	font			: 14px Trebuchet MS;
+	font-size		: 14px;
 	color			: #216778;
 }
 
@@ -219,7 +220,7 @@
 	border-width		: 1px;
 	border-color		: #216778;
 */
-	font			: 14px Trebuchet MS;
+	font-size		: 14px;
 	font-weight		: bold;
 	color			: #216778;
 }
@@ -273,7 +274,7 @@
 	border-width		: 0px 1px 1px 1px;
 	border-color		: #216778;
 
-	font			: 11px Trebuchet MS;
+	font-size		: 11px;
 	color			: #216778;
 }
 
@@ -378,7 +379,7 @@
 	border-width		: 1px;
 	border-color		: #216778;
 
-	font			: 10px Trebuchet MS;
+	font-size		: 10px;
 	color			: #216778;
 	width			: 15mm;
 }
@@ -405,7 +406,7 @@
 
 	width			: 46mm;
 
-	font			: 12px Trebuchet MS;
+	font-size		: 12px;
 	font-weight		: bold;
 	color			: #216778;
 
