--- a/css/Challenge.css
+++ b/css/Challenge.css
@@ -24,7 +24,8 @@
 }
 
 #ChallengeDiv h3 {
-	font 			: bold 4mm Trebuchet MS;
+	font-weight		: bold;
+	font-size		: 4mm;
 	color			: #216778;
 	text-align		: center;
 	padding-top		: 8px;
@@ -38,7 +39,8 @@
 
 #ChallengeDiv p {
 	margin-top		: 0mm;
-	font 			: bold 12px Trebuchet MS;
+	font-weight		: bold;
+	font-size		: 12px;
 	color			: #216778;
 }
 
@@ -91,13 +93,13 @@
 #ChallengeDiv input,
 #ChallengeDiv textarea,
 #ChallengeDiv select {
-	font 			: 12px Trebuchet MS;
+	font-size		: 12px;
 	border			: 1px solid #216778;
 	color			: #216778;
 }
 
 #ChallengeDiv span {
-	font 			: 12px Trebuchet MS;
+	font-size		: 12px;
 	color			: #216778;
 }
 
