--- a/css/Chat.css
+++ b/css/Chat.css
@@ -23,7 +23,8 @@
 #Chat #ChatList .title {
 	height			: 4mm;
 	background-color: #216778;
-	font			: bold 12px Trebuchet MS;
+	font-weight		: bold;
+	font-size		: 12px;
 	color 			: #FFF;
 	text-indent		: 3mm;
 	position		: relative;
@@ -32,7 +33,8 @@
 #Chat #ChatList .title_selec {
 	height			: 4mm;
 	background-color: #FFA200;
-	font			: bold 12px Trebuchet MS;
+	font-weight		: bold;
+	font-size		: 12px;
 	color 			: #FFF;
 	text-indent		: 3mm;
 	position		: relative;
@@ -71,14 +73,14 @@
 	list-style		: none;
 	float			: none;
 	border			: 0px;
-	font			: 11px Trebuchet MS;
+	font-size		: 11px;
 	color			: #216778;
 }
 
 #Chat #ChatList li input {
 	width			: 99%;
 	border			: 1px solid #216778;
-	font			: 11px Trebuchet MS;
+	font-size		: 11px;
 	color			: #216778;
 	padding			: 2px 0px;
 	margin-top		: 1mm;
