--- a/css/Contacts.css
+++ b/css/Contacts.css
@@ -3,7 +3,8 @@
 }
 
 #Main #Left #Contact #ContactTitle {
-	font			: bold 11px Trebuchet MS;
+	font-weight		: bold;
+	font-size		: 11px;
 	color			: #FFF;
 	padding			: 1mm 0mm 0mm 0mm;
 	display			: table;
@@ -55,7 +56,8 @@
 
 #Main #Left #Contact label {
 	display			: block;
-	font			: bold 12px Trebuchet MS;
+	font-weight		: bold;
+	font-size		: 12px;
 	color			: #216778;
 	margin			: 1mm 0mm 0.5mm 0mm;
 	cursor			: pointer;
@@ -66,7 +68,7 @@
 	text-indent		: 5mm;
 	margin			: 1px 0px;
 	width			: 42mm;
-	font			: 11px Trebuchet MS;
+	font-size		: 11px;
 	color			: #000;
 }
 
@@ -215,7 +217,8 @@
 #Main #Left #Contact #contact_search_user {
 	border-bottom:	1px solid #216778;
 	text-decoration	: none;
-	font			: bold 11px Trebuchet MS;
+	font-weight		: bold;
+	font-size		: 11px;
 	color			: #216778;
 	cursor			: pointer;
 }
@@ -238,7 +241,8 @@
 }
 
 #UserMenuDiv p {
-	font			: italic 10px Trebuchet MS;
+	font-style		: italic;
+	font-size		: 10px;
 	color			: #216778;
 	cursor			: pointer;
 	margin-bottom	: 1px;
