--- a/css/Left.css
+++ b/css/Left.css
@@ -27,7 +27,7 @@
 }
 
 #Main #Left #User span {
-	font			: 10px Trebuchet MS;
+	font-size		: 10px;
 	color			: #FFA200;
 	cursor		: pointer;
 }
@@ -37,13 +37,14 @@
 }
 
 #Main #Left #User h2 {
-	font			: bold 12px Trebuchet MS;
+	font-weight		: bold;
+	font-size		: 12px;
 	color			: #FFA200;
 }
 
 #Main #Left #User select {
 	width			: 22mm;
-	font			: 10px Trebuchet MS;
+	font-size		: 10px;
 	color			: #FFA200;
 	border			: 0px;
 }
@@ -66,7 +67,7 @@
 #Main #Left #order_nick, 
 #Main #Left .order_rating,
 #Main #Left .order_rating_selec {
-	font			: 11px Trebuchet MS;
+	font-size		: 11px
 	color			: #216778;
 	cursor			: pointer;
 	border-bottom:	1px solid
@@ -103,7 +104,8 @@
 /* Group names */
 #Main #Left label {
 	display			: block;
-	font			: bold 12px Trebuchet MS;
+	font-weight		: bold;
+	font-size		: 12px;
 	color			: #216778;
 	margin			: 1mm 0mm 0.5mm 0mm;
 }
