--- a/css/Top.css
+++ b/css/Top.css
@@ -48,7 +48,8 @@
 #Top #ExitText
 {
 	text-align		: center;
-	font			: bold 2.8mm Trebuchet MS;
+	font-weight		: bold;
+	font-size		: 2.8mm;
 	position		: relative;
 	margin-left		: 50%;
 	left			: -25%;
@@ -103,7 +104,8 @@
 }
 
 #Top .menu li {
-	font			: bold 3.5mm Trebuchet MS;
+	font-weight		: bold;
+	font-size		: 3.5mm;
 	color			: #216778;
 	border-right		: 1px solid #216778;
 	width			: 115px;
