Fixed: Little random position when open a window

--- a/css/Window.css
+++ b/css/Window.css
@@ -1,8 +1,8 @@
 #WindowBox{
-	left			: 40%;
+	/*left			: 40%;*/
 	float			: left;
-	top				: 50mm;
-	padding			: 0 5mm 6mm 5mm;
+	/*top				: 50mm;*/
+	/*padding			: 0 5mm 6mm 5mm;*/
 	position	: absolute;	
 }
 
