--- a/css/Main.css
+++ b/css/Main.css
@@ -2,7 +2,7 @@
 	margin			: 0px;
 	padding			: 0px;
 	/*font-family		: Trebuchet MS;*/
-	font-family		: Trebuchet MS, arial, sans-serif;
+	font-family		: sans-serif, Trebuchet MS, arial;
 }
 
 body {
