--- a/css/Oldgame.css
+++ b/css/Oldgame.css
@@ -170,13 +170,13 @@
 
 #OldGamesDiv p {
 	font-weight		: bold;
-	font-size		: 12px;
+/*	font-size		: 12px;*/
 	color			: #216778;
 }
 
 #OldGamesDiv span {
 	font-weight		: bold;
-	font-size		: 12px;
+	font-size		: 10px;
 	color			: #216778;
 	padding-right	:	4px;
 }
