--- a/css/Top.css
+++ b/css/Top.css
@@ -105,7 +105,7 @@
 
 #Top .menu li {
 	font-weight		: bold;
-	font-size		: 3.5mm;
+	font-size		: 11px;
 	color			: #216778;
 	border-right		: 1px solid #216778;
 	width			: 115px;
