--- a/css/Contacts.css
+++ b/css/Contacts.css
@@ -1,5 +1,5 @@
 #Main #Left #Contact {
-	margin-bottom: 3%;
+	margin-bottom: 5%;
 	height			: 52mm;
 }
 
@@ -224,16 +224,16 @@
 	border-bottom:	1px solid #216778;
 	text-decoration	: none;
 	font-weight		: bold;
-	font-size		: 11px;
+	font-size		: 9px;
 	color			: #216778;
 	cursor			: pointer;
 }
 
 #Main #Left #Contact .contact_search_user_p {
 	text-align: center;
-	padding-top:	3px;
+	padding-top:	3%;
 	padding-right:	7%;
-	padding-bottom: 2%;
+	padding-bottom: 3%;
 }
 
 /**
