--- a/css/Register.css
+++ b/css/Register.css
@@ -16,9 +16,20 @@ body {
 	margin-left		:-250px;
 }
 
+#MainDiv #FormDiv {
+	padding-left: 6%;
+}
+
+#MainDiv .italic{
+	font-style		:italic;
+	padding			:0 0 10 0;
+	text-align		:center;
+	font-size		:	10px;
+}
+
 #MainDiv p{
 	color			:#216778;
-	font-size		:13px;
+	font-size		:12px;
 	font-size-adjust:none;
 	font-stretch	:normal;
 	font-variant	:normal;
@@ -30,20 +41,21 @@ body {
 
 #MainDiv h1{
 	color			:#216778;
-	font-size		:17px;
+	font-size		:18px;
 	height			:20px;
 	font-size-adjust	:none;
 	font-stretch		:normal;
 	font-variant		:normal;
 	line-height		:normal;
 	text-align		:center;
+	font-weight     	:bold;
 }
 
 #MainDiv b{
-	width			:130px;
+	width			:160px;
 	font-family		:verdana;
 	font-weight     	:bold;
-	font-size		:10px;
+	font-size		:12px;
 	border          	:1px ;
 	float			:left;
 	text-align		:right;
@@ -93,10 +105,10 @@ input {
 	border			:1px solid #216778;
 }
 
-.italic{
+.mitalic{
 	font-style		:italic;
-	padding			:0 0 10 0;
-	text-align		:center;
+	font-size		:	10px;
+	font-weight : normal;
 }
 
 .special{
