--- a/css/Register.css
+++ b/css/Register.css
@@ -84,6 +84,10 @@ input {
 	background-image: url(../images/register/botaoconfirmar.png) ;
 }
 
+.enter:hover {
+	background-image: url(../images/register/sobrebotaoconfirmar.png) ;
+}
+
 .name{
 	width           	:220px;
 	border			:1px solid #216778;
