--- a/css/Contacts.css
+++ b/css/Contacts.css
@@ -223,10 +223,15 @@
 #Main #Left #Contact #contact_search_user {
 	border-bottom:	1px solid #216778;
 	text-decoration	: none;
-	font-weight		: bold;
-	font-size		: 9px;
+	font-style		: italic;
+	font-size		: 10px;
 	color			: #216778;
 	cursor			: pointer;
+}
+
+#Main #Left #Contact #contact_search_user:hover {
+	color			: #FFA200;
+	border-bottom:	1px solid #FFA200;
 }
 
 #Main #Left #Contact .contact_search_user_p {
