Modified: put border in user status select

--- a/css/Left.css
+++ b/css/Left.css
@@ -53,7 +53,7 @@
 	width			: 22mm;
 	font-size		: 10px;
 	color			: #FFA200;
-	border			: 0px;
+	border			: 1px solid #FFA200;
 }
 
 #Main #Left #User option {
