--- a/css/Profile.css
+++ b/css/Profile.css
@@ -177,7 +177,7 @@
 	padding-bottom		: 5px;
 	border			: 0px;
 	font-weight		: bold;
-/*	font-size		: 12px;*/
+	font-size		: 10px;
 	color						: #FFF;
 	cursor					: pointer;
 	margin					: 0px 0px 5px 2px;
