--- a/css/Top.css
+++ b/css/Top.css
@@ -35,7 +35,7 @@
 	height			: 15mm;
 	top			: 3mm;
 	width			: 85%;
-	left			: 14%;
+	left			: 12%;
 }
 
 #Top .icons li {
@@ -53,7 +53,7 @@
 	position		: relative;
 	margin-left		: 50%;
 	left			: -25%;
-	top			: -1px;
+	top			: -8%;
 }
 
 /* setting icons */
@@ -83,13 +83,13 @@
 
 #Top .icons .help {
 	background		: url('../images/help.png') no-repeat;
-	width			: 25px;
 }
 
 #Top .icons .exit {
 	background		: url('../images/exit.png') no-repeat;
 	width			: 46px;
 	color			: #216778;
+	margin-top : 2.5%;
 }
 
 #Top .icons .exit:hover {
