Modified: css style - select's width - exit button position - current games list position - room message's list width - challenge menu's font-size and color

--- a/css/User.css
+++ b/css/User.css
@@ -105,7 +105,7 @@ div .UserList #order_rating
 	color			: #216778;
 	cursor			: pointer;
 	position                : absolute;
-	width                   : 29mm;
+	width                   : 56%;
 	right                   : 3px;
 	text-align              : right;
 	font-size		: 10px;
