--- a/css/Left.css
+++ b/css/Left.css
@@ -50,7 +50,7 @@
 }
 
 #Main #Left #User select {
-	width			: 22mm;
+	width			: 78%;
 	font-size		: 10px;
 	color			: #FFA200;
 	border			: 1px solid #FFA200;
