--- a/css/TopMenus.css
+++ b/css/TopMenus.css
@@ -2,7 +2,7 @@
 #Page #GameRoomMenuDiv {
 	position		: absolute;
 	/*right			: 25mm;*/
-	top 			: 19.0mm;
+	top 			: 10.3%;
 	border			: 1px solid #216778;
 	border-top		: 0px;
 	background-color: #FFF;
@@ -25,7 +25,7 @@
 }
 
 #Page #GameRoomMenuDiv {
-	width			: 44mm;
+	width			: 13%;
 }
 
 #Page #RoomMenuDiv p,
