Added: Random color in challenge menu; Added: Announce challenge text in pt_BR; Added: Show random color in challenge menu;

--- a/css/ChallengeMenu.css
+++ b/css/ChallengeMenu.css
@@ -67,6 +67,12 @@
 	background-repeat: no-repeat;
 }
 
+#ChallengeMenu li.random
+{
+	background-image: url('../images/challenge_menu/random.png');
+	background-repeat: no-repeat;
+}
+
 #ChallengeMenu li.white
 {
 	background-image: url('../images/challenge_menu/white_enable.png');
