Modified: Height of user status icons

--- a/css/User.css
+++ b/css/User.css
@@ -42,6 +42,7 @@ div .UserList tr:hover {
 div .UserList td{
 	width			: 41mm;
 	text-align		: left;
+	height : 17px;
 }
 
 div .UserList td.rating{
