--- a/css/Board.css
+++ b/css/Board.css
@@ -377,7 +377,7 @@
 
 #GameOptionDiv select
 {
-	margin-left		: 3mm;
+	margin-left		: 2px;
 
 	border-style		: solid;
 	border-width		: 1px;
@@ -386,6 +386,9 @@
 	font-size		: 10px;
 	color			: #216778;
 	width			: 15mm;
+
+	position		: absolute;
+	bottom			: -2px;
 }
 
 /*GameTabs*/
